# libdrm

./: .editorconfig  .gitignore  Makefile.am  README  meson.build  meson_config.h.in  meson_options.txt  xf86atomic.h
amdgpu/: .editorconfig  meson.build
data/: meson.build
etnaviv/: meson.build
exynos/: meson.build
freedreno/: meson.build
include/drm/: meson.build
intel/: intel_bufmgr_gem.c  meson.build
libkms/: meson.build
man/: meson.build
nouveau/: meson.build
omap/: meson.build
radeon/: meson.build
tegra/: meson.build
tests/: meson.build
tests/amdgpu/: meson.build
tests/etnaviv/: meson.build
tests/exynos/: meson.build
tests/kms/: meson.build
tests/kmstest/: meson.build
tests/modeprint/: meson.build
tests/modetest/: meson.build
tests/nouveau/: meson.build
tests/proptest/: meson.build
tests/radeon/: meson.build
tests/tegra/: meson.build
tests/util/: meson.build
tests/vbltest/: meson.build
vc4/: meson.build
