option('intel',                    type : 'combo', choices : ['auto', 'yes', 'no'], value : 'auto')
option('radeon',                   type : 'combo', choices : ['auto', 'yes', 'no'], value : 'auto')
option('amdgpu',                   type : 'combo', choices : ['auto', 'yes', 'no'], value : 'auto')
option('nouveau',                  type : 'combo', choices : ['auto', 'yes', 'no'], value : 'auto')
option('vmwgfx',                   type : 'combo', choices : ['yes',   'no',     ], value : 'yes')
option('freedreno',                type : 'combo', choices : ['auto', 'yes', 'no'], value : 'auto')
option('freedreno-kgsl',           type : 'combo', choices : ['yes',   'no',     ], value : 'no')
option('vc4',                      type : 'combo', choices : ['auto', 'yes', 'no'], value : 'auto')
option('omap-experimental-api',    type : 'combo', choices : ['auto', 'yes', 'no'], value : 'no')
option('exynos-experimental-api',  type : 'combo', choices : ['auto', 'yes', 'no'], value : 'no')
option('tegra-experimental-api',   type : 'combo', choices : ['auto', 'yes', 'no'], value : 'no')
option('etnaviv-experimental-api', type : 'combo', choices : ['auto', 'yes', 'no'], value : 'no')
option('libkms',                   type : 'combo', choices : ['auto', 'yes', 'no'], value : 'auto')
option('valgrind',                 type : 'combo', choices : ['auto', 'yes', 'no'], value : 'no')
option('udev',                     type : 'combo', choices : ['yes',   'no',     ], value : 'no')
option('manpages',                 type : 'boolean', value : false)
