# Copyright © 2017 Intel Corporation

# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:

# The above copyright notice and this permission notice shall be included in
# all copies or substantial portions of the Software.

# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

option('libkms',      type : 'combo', value : 'auto',  choices : ['true', 'false', 'auto'])
option('intel',       type : 'combo', value : 'auto',  choices : ['true', 'false', 'auto'])
option('radeon',      type : 'combo', value : 'auto',  choices : ['true', 'false', 'auto'])
option('amdgpu',      type : 'combo', value : 'auto',  choices : ['true', 'false', 'auto'])
option('nouveau',     type : 'combo', value : 'auto',  choices : ['true', 'false', 'auto'])
option('vmwgfx',      type : 'combo', value : 'true',  choices : ['true', 'false', 'auto'])
option('omap',        type : 'combo', value : 'false', choices : ['true', 'false', 'auto'])
option('exynos',      type : 'combo', value : 'false', choices : ['true', 'false', 'auto'])
option('freedreno',   type : 'combo', value : 'auto',  choices : ['true', 'false', 'auto'])
option('tegra',       type : 'combo', value : 'false', choices : ['true', 'false', 'auto'])
option('vc4',         type : 'combo', value : 'auto',  choices : ['true', 'false', 'auto'])
option('etnaviv',     type : 'combo', value : 'false', choices : ['true', 'false', 'auto'])
option('cairo_tests', type : 'combo', value : 'auto',  choices : ['true', 'false', 'auto'])
option('man_pages',   type : 'combo', value : 'auto',  choices : ['true', 'false', 'auto'])
option('valgrind',    type : 'combo', value : 'auto',  choices : ['true', 'false', 'auto'])
option('freedreno-kgls',        type : 'boolean', value : false)
option('install_test_programs', type : 'boolean', value : false)
option('udev',                  type : 'boolean', value : false)
